# playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  server.cpp  server.h  server_reflection.cpp  textMessage.pb.cc  textMessage.pb.h  textMessage.proto  zmqHelpers.h
apps/: CMakeLists.txt  protoSerialize.cpp  test.cpp
pipeline/divide-and-conquer/: CMakeLists.txt  TaskDistributor.cpp  TaskDistributor.h  Worker.cpp  Worker.h  main.cpp  readyIndicator.pb.cc  readyIndicator.pb.h  tasksink.h  taskvent.cpp  taskwork.h
protobuf/: readyIndicator.proto  weather.proto
protobuf_dispatcher/: CMakeLists.txt  ProtobufDispatcher.h  ProtobufDispatcher2.h  client.h  message.pb.cc  message.pb.h  message.proto  server.cpp
pub-sub/: CMakeLists.txt  weather.pb.cc  wuclient.h  wuserver.cpp
pub-sub/divide-and-conquer/: CMakeLists.txt  taskvent.cpp  taskwork.h
pub-sub/weather/: CMakeLists.txt  weather.pb.h  wuclient.h  wuserver.cpp
req-rep/: CMakeLists.txt  client.h  server.cpp
utils/: timer.h  zmqHelpers.cpp  zmqHelpers.h
